spacing fix on empty dashboard

--- a/app/assets/stylesheets/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/dashboard/dashboard.scss
@@ -70,3 +70,8 @@
   max-height: 31vh;
   overflow-y: auto;
 }
+
+.placeholder {
+  width: 70vw;
+  height: 30vh;
+}
